[Improve] config.yaml configuration file compatibility improvements